# cmake_template_with_catch2

src/: library.c  library_internal.h
test/: 6_times_9.cpp  CMakeLists.txt  Factorial_test.cpp  generators.cpp  main2.cpp  string_matcher.cpp  vector_test.cpp
